<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ckt.d22400.sensortest_lp.ui.PSensorTestActivity">

    <include layout="@layout/activity_base"/>


    <TextView
        android:id="@+id/tv_proximity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolBar"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:text="@string/proximity_str"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_proximity"
        android:layout_marginTop="10dp"
        android:text="@string/btn_start_label"/>

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_start"
        android:text="@string/btn_stop_label"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_records"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:id="@+id/records_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/rv_records"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/p_table_raw1"/>

        <View
            android:layout_width="0.1dip"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/p_table_raw2"/>

        <View
            android:layout_width="0.1dip"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/p_table_raw3"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_above="@id/records_header"
        android:background="@android:color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_above="@id/rv_records"
        android:background="@android:color/black"/>
</RelativeLayout>
