<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ckt.d22400.sensortest_lp.ui.LSensorTestActivity">

    <include layout="@layout/activity_base"/>

    <TextView
        android:id="@+id/tv_lux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolBar"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:textSize="18sp"
        tools:text="光照强度：10 lx"/>

    <TextView
        android:id="@+id/tv_brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_lux"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        tools:text="当前亮度：108"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_brightness"
        android:layout_marginTop="10dp"
        android:text="由亮变暗的测试"/>

    <LinearLayout
        android:id="@+id/records_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/p_table_raw1"/>

        <View
            android:layout_width="0.1dip"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/p_table_raw2"/>

        <View
            android:layout_width="0.1dip"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/p_table_raw3"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/records_header"/>

</RelativeLayout>
